part_1/1_0_13/project-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-app
  template:
    metadata:
      labels:
        app: project-app
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: project-app-claim
      containers:
      - name: project-app
        image: bronepeace/project-app:1_0_13
        imagePullPolicy: Always
        volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
